# quantum-shield

./: .env  .env.example  .gitignore  .gitmodules  .vercel-trigger  AGENTS.md  CLAUDE.md  Cargo.toml  DIRECTORY_INVENTORY.md  FINAL_REPORT.md  FINAL_REPORT_JA.md  IMMEDIATE_ACTIONS.md  INTERNAL_REPORT_JA.md  LICENSE  MIGRATION_PLAN.md  NORTH_STAR.md  PROGRESS_ANALYSIS.md  PROJECT_AEGIS.md  PROJECT_STRUCTURE_ANALYSIS.md  README.md  SECURITY.md  TASK_PRIORITY_PLAN.md  TECHNICAL_SPEC.md  backtest_results.json  config  docker-compose.yml  foundry.toml  index.html  package-lock.json  package.json  railway.toml  slither.config.json  vercel.json
_archive/v1-optimistic-bridge/prover/: Cargo.toml
_archive/v1-optimistic-bridge/prover/src/: main.rs
_archive/v1-stark-native/plonky2-bench/: Cargo.toml
_archive/v1-stark-native/plonky2-bench/src/: ec_gadget_bench.rs  quantum_resistant_config.rs  secp256k1_gadget.rs
_archive/v1-stark-native/plonky2-verifier-core/: Cargo.toml
_archive/v1-stark-native/plonky2-verifier-core/src/: lib.rs
_archive/v1-stark-native/sp1-bench/prover-server/: Cargo.toml  build.rs
api/: Cargo.toml
api/src/: main.rs
circuits/dilithium-stark/: Cargo.toml
circuits/dilithium-stark/src/: constraints.rs  kat.rs  lib.rs  witness.rs
circuits/dilithium-stark/src/stark/: prover.rs  trace.rs
circuits/plonky3-poc/: Cargo.toml
circuits/plonky3-poc/benches/: plonky3_dilithium.rs
circuits/plonky3-poc/src/: constants.rs  lib.rs  prover.rs
client/: Cargo.toml
client/src/: lib.rs
l3-aegis/: Cargo.toml  README.md  foundry.toml  remappings.txt  test_results_with_merkle.txt
l3-aegis/cache/: solidity-files-cache.json  test-failures
l3-aegis/crates/aegis-api/: Cargo.toml
l3-aegis/crates/aegis-cli/: Cargo.toml
l3-aegis/crates/aegis-consensus/: Cargo.toml
l3-aegis/crates/aegis-core/: Cargo.toml
l3-aegis/crates/aegis-crypto/: Cargo.toml
l3-aegis/crates/aegis-l1-sync/: Cargo.toml
l3-aegis/crates/aegis-network/: Cargo.toml
l3-aegis/crates/aegis-node/: Cargo.toml
l3-aegis/crates/aegis-prover/: Cargo.toml
l3-aegis/crates/aegis-sequencer/: Cargo.toml
l3-aegis/crates/aegis-storage/: Cargo.toml
l3-aegis/docker/: Dockerfile  docker-compose.yml
l3-aegis/docker/config/: node0.toml  node1.toml  node2.toml  node3.toml
l3-aegis/docker/keys/: validators.json
l3-aegis/flat/: EconomicParameters.sol  RewardDistributor.sol
l3-aegis/scripts/: generate-dev-keys.sh  run-local-network.sh
l3-aegis/src/: lib.rs
l3-aegis/src/bridge/: ExternalBridgeAdapter.sol
l3-aegis/src/core/: CoreLayer.sol  CoreState.sol
l3-aegis/src/crypto/: SHA3Hasher.sol
l3-aegis/src/economics/: EconomicParameters.sol
l3-aegis/src/governance/: EmergencyController.sol  GovernanceSwitch.sol  GovernanceSwitch.t.sol  Governor.sol  SecurityCouncil.sol  SecurityCouncilElection.sol  Timelock.sol
l3-aegis/src/interfaces/: IERC20.sol  IEconomicParameters.sol  IEmergencyController.sol  IGovernanceSwitch.sol  IObserverRewardPool.sol  IProverRewardPool.sol  IQSInflation.sol  IQSToken.sol  ISecurityCouncil.sol  ISequencerHealth.sol  ISequencerStaking.sol  ITimelock.sol  ITokenSwitch.sol  ITokenVesting.sol  IVeQSRewardDistributor.sol
l3-aegis/src/rewards/: ProverRewardPool.sol  RewardDistributor.sol  RewardRouter.sol
l3-aegis/src/sequencer/: SequencerRegistry.sol  SequencerRotation.sol  SequencerSlashing.sol  SequencerStaking.sol
l3-aegis/src/token/: QSInflation.sol  QSToken.sol  TokenSwitch.sol  veQS.sol
l3-aegis/src/treasury/: Treasury.sol
l3-aegis/test/: CoreLayer.t.sol  CoreState.t.sol  ExternalBridgeAdapter.t.sol
l3-aegis/test/e2e/: FullSequenceE2E.t.sol  FullSystemE2E.t.sol  GovernanceModeE2E.t.sol  MultiSequencerE2E.t.sol  SCElectionE2E.t.sol
l3-aegis/test/economics/: EconomicParameters.t.sol
l3-aegis/test/fuzz/: GovernanceFuzz.t.sol  SequencerFuzz.t.sol  VeQSFuzz.t.sol
l3-aegis/test/governance/: EmergencyController.t.sol  GovernanceIntegration.t.sol  GovernanceSwitch.t.sol  GovernanceSwitch_fix.patch  Governor.t.sol  SecurityCouncil.t.sol  SecurityCouncilElection.t.sol  Timelock.t.sol
l3-aegis/test/interfaces/: IConstitutionLock.t.sol  IGovernanceSwitch.t.sol  ITokenSwitch.t.sol
l3-aegis/test/rewards/: RewardDistributor.t.sol
l3-aegis/test/sequencer/: SequencerFailover.t.sol  SequencerRotation.t.sol  SequencerSlashing.t.sol  SequencerStaking.t.sol
l3-aegis/test/token/: QSInflation.t.sol  QSToken.t.sol  TokenSwitch.t.sol  VeQSRewardDistributor.t.sol  veQS.t.sol  veQSDelegation.t.sol
l3-aegis/test/treasury/: Treasury.t.sol
plonky2-bench/: Cargo.toml
plonky2-bench/src/: bridge_aggregation.rs  ec_gadget_bench.rs  main.rs
services/api/: Cargo.toml  Dockerfile
services/api/config/: default.yaml  production.yaml
services/api/migrations/: 001_initial_schema.sql  002_support_tables.sql  003_l1_sync_state.sql  006_insurance_tables.sql  008_signing_queue.sql  010_admin_auth_security.sql
services/api/scripts/: cleanup_seed_data.sh  cleanup_seed_data.sql  update-backend-progress.sh
services/api/src/: config.rs  crypto.rs  error.rs  main.rs  middleware.rs  types.rs
services/api/tests/: api_tests.rs  sequence_e2e_test.rs
services/event-bridge/: Cargo.toml  Dockerfile
services/event-bridge/config/: event_bridge.yaml
services/event-bridge/src/: error.rs  idempotency.rs  lib.rs  main.rs  notification.rs  queue.rs  rabbitmq.rs  retry.rs
services/event-bridge/tests/: integration_test.rs
sp1-bench/program/: Cargo.toml
sp1-bench/program/src/: main.rs
sp1-bench/script/: Cargo.toml
sp1-bench/script/src/: main.rs
src/api/api/: .env.example  Cargo.toml  Dockerfile  entrypoint.sh
src/l3/: Cargo.toml  README.md  test_output.txt  test_results.txt  test_results_after_pull.txt
src/l3/cache/: solidity-files-cache.json
src/l3/docker/: Dockerfile
src/l3/flat/: QSInflation.sol  Treasury.sol
src/l3/script/: DeployCore.s.sol  DeployTestnet.s.sol
src/l3/scripts/: stop-local-network.sh
src/services/monitor-bot/: Cargo.toml  Dockerfile
src/services/sig-queue/: Cargo.toml
stark-prover/: Cargo.toml
stark-prover/src/: main.rs
(+3658 files in other folders)
