[workspace]
members = [
    "src/crypto/shared-types",
    "src/crypto/circuits/dilithium-stark",
    "src/crypto/circuits/plonky3-poc",
    "src/services/event-bridge",
    "src/api/api",
    "src/services/sig-queue",
    "src/services/monitor-bot",
]
# Excluded packages (missing dependencies or different target)
exclude = [
    "src/frontend/sdk/wasm",
    "src/crypto/stark-prover",
    "client",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Quantum Shield Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Dilithium (FIPS 204)
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Hashing
sha3 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"

# Async
tokio = { version = "1", features = ["full"] }

# Web
axum = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ZK Proving (Plonky3) - Updated to latest commit (2026-01-04)
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "52b9e418813b83d51902cf163cd1d92b015512a3" }
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "52b9e418813b83d51902cf163cd1d92b015512a3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "52b9e418813b83d51902cf163cd1d92b015512a3" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "52b9e418813b83d51902cf163cd1d92b015512a3" }

# ZK Proving (Winterfell) - STARK prover
winterfell = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1

# SLH-DSA (SPHINCS+) is hash-heavy post-quantum crypto. At opt-level=0 a single
# keygen/sign can take minutes. Always build it optimized so tests finish in
# seconds regardless of the ambient dev profile.
[profile.dev.package.slh-dsa]
opt-level = 3
[profile.test.package.slh-dsa]
opt-level = 3
