[package]
name = "quantum-shield-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha3 = "0.10"
rand = "0.8"

# For Dilithium signing (using pqcrypto)
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# HTTP client for SP1 Prover Server (disabled for now - use mock proofs)
# reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "api-server"
path = "src/main.rs"
