[package]
name = "quantum-shield-client"
version = "0.1.0"
edition = "2021"
description = "Quantum Shield Client - Dilithium signature generation for Optimistic Attestation Bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Dilithium signature
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Hashing
sha3 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "getrandom"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
