[package]
name = "l3-aegis"
version = "0.1.0"
edition = "2021"
authors = ["Quantum Shield Team"]
description = "L3 Aegis Node - Quantum-resistant bridge layer"
license = "MIT"

[workspace]
members = [
    # Core crates
    "crates/aegis-types",
    "crates/aegis-core",
    "crates/aegis-crypto",
    "crates/aegis-smt",
    # Network & Consensus
    "crates/aegis-network",
    "crates/aegis-consensus",
    # Storage
    "crates/aegis-storage",
    # Node & CLI
    "crates/aegis-node",
    "crates/aegis-cli"
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Cryptography (CP-1 compliant: SHA3-256, Dilithium-III)
sha3 = "0.10"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
rand = "0.8"

# Database
rocksdb = "0.21"

# Networking
tonic = "0.10"
prost = "0.12"
actix-web = "4.4"
tokio-tungstenite = "0.21"
rustls = "0.22"
tokio-rustls = "0.25"

# Ethereum
ethers = "2.0"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
