[package]
name = "plonky2-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
# Plonky2 STARK proving system (v1.x works on stable Rust)
plonky2 = "1.1"
plonky2_field = "1.0"

# Logging and benchmarking
log = "0.4"
env_logger = "0.11"

# Time measurement
instant = "0.1"

# Anyhow for error handling
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
