[package]
name = "stark-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "STARK prover server for Dilithium signature verification proofs"

[[bin]]
name = "stark-prover"
path = "src/main.rs"

[dependencies]
# Circuit
dilithium-stark = { path = "../circuits/dilithium-stark" }

# Client types
quantum-shield-client = { path = "../client" }

# Async runtime
tokio.workspace = true

# Web server
axum.workspace = true
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bincode.workspace = true

# Hashing
sha3.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
