[package]
name = "dilithium-stark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "STARK circuit for Dilithium (FIPS 204) signature verification"

[dependencies]
# Dilithium
pqcrypto-dilithium.workspace = true
pqcrypto-traits.workspace = true

# Hashing
sha3.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bincode.workspace = true

# Logging
tracing.workspace = true

# Field arithmetic (for NTT)
# TODO: Switch to Plonky3 field when circuit is implemented
# p3-field = { workspace = true }
# p3-air = { workspace = true }

[features]
default = ["pq_crystals_ffi"]
pq_crystals_ffi = []

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "generate-proof"
path = "src/bin/generate_proof.rs"

[[bench]]
name = "ntt_circuit"
harness = false
