[package]
name = "quantum-shield-api"
version = "0.1.0"
edition = "2021"
authors = ["Quantum Shield Team"]
description = "Quantum Shield REST API Server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database & Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Message Queue
lapin = "2.3"  # RabbitMQ client

# Crypto - CP-1 Compliant (Quantum Resistant)
sha3 = "0.10"
hex = "0.4"
# NIST FIPS 204 - ML-DSA-65 (Dilithium) for user signatures
# Migrated from pqcrypto-dilithium (pre-FIPS) to fips204 (NIST standard)
fips204 = { version = "0.4", features = ["ml-dsa-65", "default-rng"] }
# NIST FIPS 205 - SLH-DSA (SPHINCS+) for Prover signatures
# TASK-P5-007: SPHINCS+ Verification Implementation
fips205 = { version = "0.4", features = ["slh_dsa_shake_128s", "default-rng"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Config
config = "0.14"
dotenvy = "0.15"

# JWT
jsonwebtoken = "9"

# TLS/mTLS
rustls = "0.22"
tokio-rustls = "0.25"

[dev-dependencies]
axum-test = "14"
mockall = "0.12"

[[bin]]
name = "api-server"
path = "src/main.rs"
