[package]
name = "event-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Quantum Shield Team"]
description = "L1↔L3 Event Bridge Service"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Ethereum
alloy = { version = "0.8", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "streams"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# SHA3-256 (CP-1 compliant)
sha3 = "0.10"

# Configuration
config = "0.14"

# Metrics
prometheus = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[bin]]
name = "event-bridge"
path = "src/main.rs"

[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"

[[bin]]
name = "relayer"
path = "src/bin/relayer.rs"
