[package]
name = "dilithium-sp1-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "5.2"

# Winterfell STARK prover/verifier
winterfell = { version = "0.10", default-features = false }

# Our Dilithium STARK library (path will be adjusted in Codespaces)
# For local dev, this is a relative path
# zk_dilithium_ntt = { path = "../../" }

# Serialization for proof data
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "1.3", default-features = false }

[profile.release]
opt-level = 3
lto = true
