[package]
name = "dilithium-sp1-script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "3.0"

# Winterfell for generating proofs on host
winterfell = "0.10"

# Our Dilithium STARK library
# zk_dilithium_ntt = { path = "../../" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Timing
chrono = "0.4"

[build-dependencies]
sp1-build = "3.0"
