[package]
name = "quantum-shield-prover"
version = "0.1.0"
edition = "2021"
description = "Quantum Shield Prover Server - Attestation generation for Optimistic Bridge"

[[bin]]
name = "prover-server"
path = "src/main.rs"

[dependencies]
# Client library for types
quantum-shield-client = { path = "../client" }

# Dilithium verification
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Hashing
sha3 = "0.10"

# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
