[package]
name = "plonky2-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
# Plonky2 STARK proving system (v1.x works on stable Rust)
plonky2 = "1.1"
plonky2_field = "1.0"
# Note: plonky2_u32 removed due to version conflicts

# Logging and benchmarking
log = "0.4"
env_logger = "0.11"

# Time measurement
instant = "0.1"

# Anyhow for error handling
anyhow = "1.0"

# Serialization for proof size measurement
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Big integer arithmetic for secp256k1 field operations
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# secp256k1 parameters verification (host-side only)
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"

# Random number generation for tests
rand = "0.8"

[[bin]]
name = "plonky2-bench"
path = "src/main.rs"

[[bin]]
name = "ec-gadget-bench"
path = "src/ec_gadget_bench.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
