[package]
name = "aegis-consensus"
version = "0.1.0"
edition = "2021"
description = "BFT Consensus engine for L3 Aegis"

[dependencies]
aegis-core = { path = "../aegis-core" }
aegis-crypto = { path = "../aegis-crypto" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto
sha3 = "0.10"
ed25519-dalek = "2.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
