[package]
name = "aegis-crypto"
version = "0.1.0"
edition = "2021"
description = "Quantum-resistant cryptography for L3 Aegis"

[dependencies]
aegis-core = { path = "../aegis-core" }
serde = { workspace = true }
sha3 = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
