[package]
name = "quantum-shield-api"
version = "0.1.0"
edition = "2021"
authors = ["Quantum Shield Team"]
description = "Quantum Shield REST API Server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database & Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"] }
bigdecimal = { version = "0.3", features = ["serde"] }

# Message Queue
lapin = "2.3"  # RabbitMQ client

# Crypto - CP-1 Compliant (Quantum Resistant)
sha3 = "0.10"
hex = "0.4"
# NIST FIPS 204 - ML-DSA-65 (Dilithium) for user signatures
# Migrated from pqcrypto-dilithium (pre-FIPS) to fips204 (NIST standard)
fips204 = { version = "0.4", features = ["ml-dsa-65", "default-rng"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "std"] }

# Config
config = "0.14"
dotenvy = "0.15"

# JWT
jsonwebtoken = "9"

# TLS/mTLS
rustls = "0.22"
tokio-rustls = "0.25"

# TOTP 2FA verification (Phase 3 - S-2 security fix)
totp-rs = { version = "5", features = ["otpauth"] }
# SHA-256 for refresh token hashing (Phase 3 - S-3 security fix)
sha2 = "0.10"

# Ethereum interaction (VRF Contract integration - TASK-P5-005)
ethers = { version = "2", features = ["abigen"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# S3-compatible object storage (MinIO/AWS S3)
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

# Multipart file upload
axum-extra = { version = "0.9", features = ["multipart"] }

[dev-dependencies]
axum-test = "14"
mockall = "0.12"
serde_yaml = "0.9"

[[bin]]
name = "api-server"
path = "src/main.rs"
