[package]
name = "quantum-shield-sig-queue"
version = "0.1.0"
edition = "2021"
description = "Quantum Shield Signature Queue Service (API-005)"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = "0.4"

[[bin]]
name = "sig-queue"
path = "src/main.rs"
