[package]
name = "sp1-prover-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
sha3 = "0.10"
num-bigint = "0.4"

# HTTP server
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
sp1-build = "5.2"
