[package]
name = "aegis-smt"
version = "0.1.0"
edition = "2021"
description = "Sparse Merkle Tree for L3 Aegis state management"

[dependencies]
aegis-core = { path = "../aegis-core" }
serde = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rocksdb = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
